Implementado ordenação das listas.